--- a/webportal/template/homepage/homepage.html
+++ b/webportal/template/homepage/homepage.html
@@ -21,5 +21,97 @@
                 <li class="homepage-qualifications">Can speak English and Serbian fluently</li>
             </ul>
         </div>
+        <div>
+            <h3 class="homepage-heading">My Stack</h3>
+            <div class="homepage-stack">
+                <div class="icon-container-label" >Client Side:</div>
+                <div class="icon-list">
+                    <div class="icon-container">
+                        <img src="/content/images/HTML5-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/CSS3-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/JavaScript-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/React-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Typescript-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/PixiJS-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/WebGL-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/C++-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Webpack-logo.svg" class="tech-icon"/>
+                    </div>
+                </div>
+            </div>
+            <div class="homepage-stack">
+                <div class="icon-container-label" >Server Side:</div>
+                <div class="icon-list">
+                    <div class="icon-container">
+                        <img src="/content/images/Go-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Docker-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Kubernetes-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/NodeJS-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Java-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/AWS-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Heroku-logo.svg" class="tech-icon"/>
+                    </div>
+                </div>
+            </div>
+            <div class="homepage-stack">
+                <div class="icon-container-label">Databases:</div>
+                <div  class="icon-list">
+                    <div class="icon-container">
+                        <img src="/content/images/MongoDB-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Postgresql-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Redis-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/MySQL-logo.svg" class="tech-icon"/>
+                    </div>
+                </div>
+            </div>
+            <div class="homepage-stack">
+                <div class="icon-container-label">Other tools:</div>
+                <div class="icon-list">
+                    <div class="icon-container">
+                        <img src="/content/images/Git-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Vim-logo.svg" class="tech-icon"/>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/content/images/Visual-Studio.svg" class="tech-icon"/>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 <% } %>
