--- a/webportal/template/post/post.html
+++ b/webportal/template/post/post.html
@@ -12,7 +12,7 @@
         </ul>
         <div class="post-holder">
             <div class="post-title"><%==s post.Title%></div>
-            <div class="post-date"><%==s post.Timestamp%></div>
+            <div class="post-date"><%==s post.PublishTimestamp%></div>
             <div class="post-content"><%==s post.Content%></div>
         </div>
     </div>
