--- a/webportal/content/projects.css
+++ b/webportal/content/projects.css
@@ -3,7 +3,7 @@
     background-color: #33112b;
     width: 300px;
     height: 300px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .project-title{
@@ -18,11 +18,13 @@
     font-family: "Bangers", "cursive";
     font-size: 14px;
     text-shadow: 2px 2px 0 #26021d;
+    padding: 10px;
 }
 
 .project-image{
-    max-height: 200px;
-    width: auto;
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .card-containter{
