Added image stretching for projects page

--- a/webportal/content/projects.css
+++ b/webportal/content/projects.css
@@ -23,8 +23,11 @@
 
 .project-image{
     height: 200px;
-    width: 100%;
     object-fit: cover;
+}
+
+.stretched-image {
+    width: 100%;
 }
 
 .card-containter{
