social media links

--- a/webportal/template/homepage/homepage.html
+++ b/webportal/template/homepage/homepage.html
@@ -2,26 +2,27 @@
 <%~ "index.html" %>
 <%@ body { %>
     <div class="homepage-container">
-        <div>
+        <div class="page-section">
             <h1 class="homepage-heading"><%= header %></h1>
             <p class="homepage-content"><%= message %></p>
         </div>
-        <div>
+        <div class="page-section">
             <h3 class="homepage-heading">About Me</h3>
+            
             <p class="homepage-content">I'm currently a college student at the University of Belgrade looking for work in 
-                the web development industry. <br> My programming journey started when I was 14 (almost 10 years ago). Since 
+                the web development industry. <br> My programming journey started 10 years ago. Since 
                 then I finished high school at Belgrade's 14th gimnasium, enrolled at University of Belgrade's Faculty of 
                 Organisational Science's IT programme, and used all sorts of databases, languages and frameworks.</p>
         </div>
-        <div>
+        <div class="page-section">
             <h3 class="homepage-heading">Qualifications</h3>
             <ul>
                 <li class="homepage-qualifications">High school degree from Belgrade's 14th gimnasium</li>
-                <li class="homepage-qualifications">3rd year bachelor's degree at the University of Belgrade</li>
+                <li class="homepage-qualifications">3rd year of a 4 year bachelor's degree at the University of Belgrade</li>
                 <li class="homepage-qualifications">Can speak English and Serbian fluently</li>
             </ul>
         </div>
-        <div>
+        <div class="page-section">
             <h3 class="homepage-heading">My Stack</h3>
             <div class="homepage-stack">
                 <div class="icon-container-label" >Client Side:</div>
