--- a/webportal/content/homepage.css
+++ b/webportal/content/homepage.css
@@ -69,3 +69,17 @@
     width: 50px;
     height: 50px;
 }
+
+.about-me-header-image {
+    width: 400px;
+    height: auto;
+    position: absolute;
+    top: -100px;
+    left: 300px;
+    border-bottom: 3px solid #d08a12 ;
+    filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(270deg);
+}
+
+.page-section {
+    position: relative;
+}
