--- a/webportal/template/admin/editsettings/editsettings.html
+++ b/webportal/template/admin/editsettings/editsettings.html
@@ -1,4 +1,4 @@
-<%: func HandleEditSettings(posts []models.Post, w io.Writer)%>
+<%: func HandleEditSettings( soclinks map[string]string, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -6,82 +6,51 @@
     <script src="/content/js/he.js"></script>
     <script src="/content/js/editpost.js"></script>
 
+    <!--TODO: Add systems for backing up and scheduling backups, view comments, ban IPs, reviewing logs, view
+    statistics, -->
+
     <div class="editor-container">
-        <form id="form1" action="/blog/edit" enctype="multipart/form-data" method="POST">
-            <div class="input-container">
-                <label for="SelectedPost" class="editor-label">Choose a post:</label>
-                <select name="SelectedPost" id="chosen-post" class="editor-select">
-                    <option value="None">New post</option>
-                    <% for _, post := range posts { %>
-                        <option value="<%=s post.ID %>"><%=s post.Title %></option>
-                        
-                    <% } %>
-                </select>
-                <% for _, post := range posts { %>
-                    <div id="title-<%=s post.ID %>" style="display:none;"><%=s post.Title %></div>
-                    <div id="description-<%=s post.ID %>" style="display:none;"><%=s post.Description %></div>
-                    <div id="content-<%=s post.ID %>" style="display:none;"><%=s post.Content %></div>
-                    <div id="thumbnail-<%=s post.ID %>" style="display:none;"><%=s post.Thumbnail %></div>
-                    <div id="thumbnailstretched-<%=s post.ID %>" style="display:none;"><%=b post.ThumbnailStretched %></div>
-                    <div id="publishtimestamp-<%=s post.ID %>" style="display:none;"><%=s post.PublishTimestamp %></div>
-                    <div id="lastedittimestamp-<%=s post.ID %>" style="display:none;"><%=s post.LastEditTimestamp %></div>
-                    <div id="hidden-<%=s post.ID %>" style="display:none;"><%=b post.Hidden %></div>
-                    <div id="published-<%=s post.ID %>" style="display:none;"><%=b post.Published %></div>
-                <% } %>
+        <div class="timeline">
+            <div class="timeline-item timeline-comment">
+                <div class="timeline-comment-header">Guest123 commented</div>
+                <p class="timeline-comment-body">Bla bla bla bla bla!</p>
             </div>
-            <div class="input-container">
-                <label for="post-title" class="editor-label">Title: </label>
-                <input name="Title" id="post-title" class="editor-input"></input>
+        </div>
+        <div class="chart"></div>
+        <div class="logs">
+            <div class="logs-item">
+                199.199.199.199 connected!
             </div>
-            <div class="input-container">
-                <label for="post-description" class="editor-label">Description: </label>
-                <input name="Description" id="post-description" class="editor-input"></input>
-            </div>
-            <div class="input-container">
-                <label for="post-thumbnail" class="editor-label">Thumbnail: </label>
-                <input name="Thumbnail" type="file" accept="image/*" id="post-thumbnail"></input>
-            </div>
-            <div class="label-container">
-                <div class="editor-label">Thumbnail stretched: </div>
-                <select name="ThumbnailStretched" id="post-thumbnailstretched" class="text" >
-                    <option id="post-thumbnailstretched-option-true" value="true">True</option>
-                    <option id="post-thumbnailstretched-option-false" value="false">False</option>
-                </select>
-            </div>
-            <div class="input-container">
-                <img id="post-thumbnail-image" src="/content/no-image.png">
-            </div>
-            <div class="label-container">
-                <div class="editor-label">Hidden: </div>
-                <select name="Hidden" id="post-hidden" class="text" >
-                    <option id="post-hidden-option-true" value="true">True</option>
-                    <option id="post-hidden-option-false" value="false">False</option>
-                </select>
-            </div>
-            <div class="label-container">
-                <div class="editor-label">Published: </div><div id="post-published" class="text"></div>
-            </div>
-            <div class="label-container">
-                <div class="editor-label">Date Published: </div><div id="post-publish-date" class="text"></div>
-            </div>
-            <div class="label-container">
-                <div class="editor-label">Last Modified: </div><div id="post-last-edit-date" class="text"></div>
-            </div>
+        </div>
+        <div class="backup">
+            <button>Backup</button>
+            
+        </div>
+        <div class="ip-management"></div>
+        <div class="social media">
             <div>
-                <textarea name="Content" id="post-content"></textarea>
+                <div class="group-header">
+                    Links
+                </div>
+                <div class="group-body">
+                    <%
+                        for key, value := range soclinks {
+                    %>
+                            <div class="soclink">
+                                <span><input class="soclink-name" type="text" value="<%==s key %>"/></span>=<span><input class="sociallink-link" type="text" value="<%==s value %>"/></span>
+                            </div>
+                    <%
+                        }
+                    %>
+                    <div></div>
+                </div>
             </div>
-            <input type="hidden" id="post-thumbnail-name" name="ThumbnailName" value="">
-            <div class="submit-container">
-                <button id="submit-publish" class="submit-btn submit-hidden" type="submit" name="Send" value="PUBLISH">Publish</button>
-                <button class="submit-btn" type="submit" name="Send" value="POST">Post</button>
-                <button class="submit-btn" type="submit" name="Send" value="DELETE">Delete</button>
-            </div>
-        </form>
+        </div>
+
+
     </div>
 
     <script>
-     
-        initTinyMCE()
 
     </script>
     
