--- a/webportal/template/index.html
+++ b/webportal/template/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/content/post.css">
     <link rel="stylesheet" href="/content/editor.css">
     <link rel="stylesheet" href="/content/knowledge-timeline.css">
+    <link rel="stylesheet" href="/content/edithomepage.css">
     <script src="/content/js/nav.js"></script>
 </head>
 <body>
