--- a/webportal/template/admin/editsettings/editsettings.html
+++ b/webportal/template/admin/editsettings/editsettings.html
@@ -1,5 +1,6 @@
 <%: func HandleEditSettings( soclinks map[string]string, w io.Writer)%>
 <%~ "index.html" %>
+
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -9,51 +10,54 @@
 
     <!--TODO: Add systems for backing up and scheduling backups, view comments, ban IPs, reviewing logs, view
     statistics, -->
-
-    <div class="editor-container">
-        <div class="timeline">
-            <div class="timeline-item timeline-comment">
-                <div class="timeline-comment-header">Guest123 commented</div>
-                <p class="timeline-comment-body">Bla bla bla bla bla!</p>
-            </div>
+    <div class="page-container">
+        <div class="sidemenu-container">
+            <%+ "sidemenu/sidemenu.html" %>
         </div>
-        <div class="chart"></div>
-        <div class="logs">
-            <div class="logs-item">
-                199.199.199.199 connected!
-            </div>
-        </div>
-        <div class="backup">
-            <button>Backup</button>
-            
-        </div>
-        <div class="ip-management"></div>
-        <div class="social media">
-            <div>
-                <div class="group-header">
-                    Links
-                </div>
-                <div class="group-body">
-                    <%
-                        for key, value := range soclinks {
-                    %>
-                            <div class="soclink">
-                                <span><input class="soclink-name" type="text" value="<%==s key %>"/></span>=<span><input class="sociallink-link" type="text" value="<%==s value %>"/></span>
-                            </div>
-                    <%
-                        }
-                    %>
-                    <div></div>
+        <div class="editor-container">
+            <div class="editor-item dashboard-list timeline">
+                <div class="timeline-item timeline-comment">
+                    <div class="timeline-comment-header">Guest123 commented</div>
+                    <p class="timeline-comment-body">Bla bla bla bla bla!</p>
                 </div>
             </div>
-        </div>
-        <div>
-            <canvas id="myChart"></canvas>
-        </div>
-        <div>
-            <canvas id="myChart2"></canvas>
-        </div>
+            <div class="editor-item dashboard-list logs">
+                <div class="logs-item">
+                    199.199.199.199 connected!
+                </div>
+            </div>
+            <div class="editor-item backup">
+                <button class="editor-button">Backup</button>
+                
+            </div>
+            <div class="editor-item ip-management"></div>
+            <div class="editor-item social-media">
+                <div>
+                    <div class="group-header">
+                        Links
+                    </div>
+                    <div class="group-body">
+                        <%
+                            for key, value := range soclinks {
+                        %>
+                                <div class="soclink">
+                                    <span><input class="soclink-name" type="text" value="<%==s key %>"/></span>=<span><input class="sociallink-link" type="text" value="<%==s value %>"/></span>
+                                </div>
+                        <%
+                            }
+                        %>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+            <div class="editor-item chart-container">
+                <canvas id="myChart"></canvas>
+            </div>
+            <div class="editor-item chart-container small-chart">
+                <canvas id="myChart2"></canvas>
+            </div>
 
+        </div>
     </div>
 
     <script>
