--- a/webportal/template/tag/edittag.html
+++ b/webportal/template/tag/edittag.html
@@ -47,9 +47,6 @@
             <div class="input-container">
                 <img id="tag-thumbnail-image" src="/content/no-image.png">
             </div>
-            <div>
-                <textarea name="Content" id="tag-content"></textarea>
-            </div>
             <input type="hidden" id="tag-thumbnail-name" name="ThumbnailName" value="">
             <div class="submit-container">
                 <button class="submit-btn" type="submit" name="Send" value="POST">Post</button>
@@ -60,7 +57,7 @@
 
     <script>
      
-        initTinyMCETag()
+        initTagEditor()
 
     </script>
     
