--- a/webportal/template/index.html
+++ b/webportal/template/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/content/editor.css">
     <link rel="stylesheet" href="/content/knowledge-timeline.css">
     <link rel="stylesheet" href="/content/edithomepage.css">
+    <link rel="stylesheet" href="/content/dashboard.css">
     <script src="/content/js/nav.js"></script>
 </head>
 <body>
